fix: List 的 arrow 在 align-items 为 stretch 时保持居中

--- a/src/components/list/index.less
+++ b/src/components/list/index.less
@@ -52,6 +52,8 @@
     }
     &-arrow {
       flex: none;
+      display: flex;
+      align-items: center;
       padding-left: 12px;
       color: var(--font-color-weak);
       font-size: 16px;
